# sszb-ai-slopification

./: .gitmodules  Game.js  index.html
game/: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  PROJECT_INDEX.md
game/.claude/skills/raycmd/: SKILL.md
game/docs/: ARCHITECTURE.md  ASSET_INDEX.md  GAME_DESIGN.md  TEST_SYSTEM_DESIGN.md
game/docs/raylib/: 01_defines.txt  02_structs.txt  03_enums.txt  04_core_window.txt  05_input.txt  06_shapes.txt  07_textures.txt  08_text.txt  09_models.txt  10_audio.txt  INDEX.md
game/src/: assets.c  assets.h  command_server.c  command_server.h  day.c  day.h  game.c  game_types.h  index.html  input.h  main.c  night.c  night.h
game/tests/: run_test.sh  test_full_cycle.sszb
